[gd_scene load_steps=12 format=3 uid="uid://cuqjpjakitt7t"]

[ext_resource type="Script" uid="uid://co0nju7v0deme" path="res://scene/player/player.gd" id="1_5lop3"]
[ext_resource type="Script" uid="uid://b6ey5m80desqf" path="res://scene/player/state_machine.gd" id="2_732fb"]
[ext_resource type="Shape2D" uid="uid://kg2fnu2m7bs8" path="res://scene/player/collision_shape/normal.tres" id="2_qjg4s"]
[ext_resource type="Script" uid="uid://b2srfyujbqh53" path="res://scene/player/idle.gd" id="3_732fb"]
[ext_resource type="Script" uid="uid://brqbum8ooxk1j" path="res://class/state_machine/state.gd" id="3_ajqqa"]
[ext_resource type="Script" uid="uid://dpghkfluquonl" path="res://scene/player/game_input_control.gd" id="4_5lop3"]
[ext_resource type="Script" uid="uid://cvb806rq8f1h" path="res://scene/player/run.gd" id="4_732fb"]
[ext_resource type="Script" uid="uid://0w2s4vpx4iqq" path="res://scene/player/jump.gd" id="5_732fb"]
[ext_resource type="Script" uid="uid://y8783jdrnede" path="res://scene/player/dash.gd" id="6_hfhxk"]
[ext_resource type="Script" uid="uid://dgl1jud157h88" path="res://scene/player/climb.gd" id="7_oypl4"]
[ext_resource type="Script" uid="uid://4v4i80kt2x4i" path="res://scene/player/collision_management.gd" id="10_qjg4s"]

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_5lop3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../GameInputControl")

[node name="main_collision" type="CollisionShape2D" parent="."]
shape = ExtResource("2_qjg4s")

[node name="State_machine" type="Node" parent="."]
script = ExtResource("2_732fb")
init_state = "idle"
metadata/_custom_type_script = "uid://bmh5pgvtmuds7"

[node name="idle" type="Node2D" parent="State_machine"]
script = ExtResource("3_732fb")
metadata/_custom_type_script = "uid://brqbum8ooxk1j"

[node name="run" type="Node2D" parent="State_machine"]
script = ExtResource("4_732fb")
metadata/_custom_type_script = "uid://brqbum8ooxk1j"

[node name="jump" type="Node2D" parent="State_machine"]
script = ExtResource("5_732fb")
metadata/_custom_type_script = "uid://brqbum8ooxk1j"

[node name="dash" type="Node2D" parent="State_machine"]
script = ExtResource("6_hfhxk")
metadata/_custom_type_script = "uid://brqbum8ooxk1j"

[node name="climb" type="Node2D" parent="State_machine"]
script = ExtResource("7_oypl4")
metadata/_custom_type_script = "uid://brqbum8ooxk1j"

[node name="fall" type="Node2D" parent="State_machine"]
script = ExtResource("3_ajqqa")
metadata/_custom_type_script = "uid://brqbum8ooxk1j"

[node name="Collision_management" type="Node" parent="."]
script = ExtResource("10_qjg4s")
init_state = null
is_debug = null
metadata/_custom_type_script = "uid://blsn8yru580ds"

[node name="GameInputControl" type="Node" parent="."]
script = ExtResource("4_5lop3")
metadata/_custom_type_script = "uid://o3xnrols1rsb"

[node name="front_head" type="RayCast2D" parent="."]
position = Vector2(0, -24)
target_position = Vector2(12.5, 0)

[node name="front_body" type="RayCast2D" parent="."]
target_position = Vector2(12.5, 0)

[node name="front_foot" type="RayCast2D" parent="."]
position = Vector2(0, 24)
target_position = Vector2(12.5, 0)

[node name="back_head" type="RayCast2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(-1, -1)
target_position = Vector2(12.5, 0)

[node name="back_body" type="RayCast2D" parent="."]
scale = Vector2(-1, -1)
target_position = Vector2(12.5, 0)

[node name="back_foot" type="RayCast2D" parent="."]
position = Vector2(0, 24)
scale = Vector2(-1, -1)
target_position = Vector2(12.5, 0)

[node name="debug" type="Label" parent="."]
offset_left = -20.0
offset_top = -48.0
offset_right = 20.0
offset_bottom = -25.0
